update to replaceVariables